[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eqsolver = "0.1.2"
itertools = "0.12.0"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
num = "0.4.1"
num-traits = "0.2.15"
pathfinding = "4.6.0"
petgraph = "0.6.4"
priority-queue = "1.3.2"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
scanf = "1.2.1"
sscanf = "0.4.1"